# shardloom

./: .gitattributes  .gitignore  AGENTS.md  CLA.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  NOTICE  README.md  REUSE.toml  SECURITY.md  deny.toml  wrangler.jsonc  wrangler.toml
python/: NOTICE  README.md  pyproject.toml  setup.py
python/examples/: compatibility_source_smoke.py  live_etl_smoke.py  local_vortex_primitives_smoke.py  quickstart_proof.py  workflow_readiness_smoke.py
python/tests/: test_ci_python_test_shards.py  test_cli_client.py  test_compute_engine_completion_gate.py  test_front_door_benchmark_publication.py  test_prepared_route.py  test_query_builder.py  test_quickstart_proof.py  test_release_scripts.py  test_runtime_gap_family_burn_down.py  test_sql_python_dataframe_parity.py  test_user_route_capability_report.py  test_user_surface_graduation_matrix.py  test_user_surface_runtime_gap_inventory.py  test_v1_api_schema_stability.py  test_v1_front_door_runtime_scope.py  test_v1_local_output_sink_scope.py  test_v1_source_prepared_state_scope.py  test_v1_vortex_runtime_scope.py
shardloom-cli/: Cargo.toml
shardloom-cli/src/: benchmark_planning.rs  benchmark_runtime.rs  ci_work_shaping.rs  cli_output.rs  cli_time.rs  command_family.rs  command_registry.rs  diagnostics.rs  engine_fabric_planning.rs  engine_runtime_planning.rs  evidence_certificates.rs  evidence_schema_registry.rs  extension_planning.rs  gar_0029_evidence.rs  generated_source_runtime.rs  input_planning.rs  main.rs  object_store_planning.rs  object_store_runtime.rs  operational_hardening.rs  optimizer_planning.rs  packaging_deployment.rs  prepared_source_backed_execution.rs  public_workflow_route.rs  rest_api_planning.rs  runtime_defaults.rs  semantic_conformance.rs  sql_local_source_runtime.rs  sqlite_local_runtime.rs  status_capabilities.rs  table_lakehouse_runtime.rs  typed_envelope.rs  vortex_output_commit.rs  vortex_planning.rs  vortex_primitive_execution.rs  vortex_runtime_planning.rs  workflow_planning.rs  workload_certification.rs
shardloom-cli/tests/: adaptive_optimizer_memory_snapshots.rs  agent_contract_pack_snapshots.rs  api_protocol_snapshots.rs  backpressure_plan_snapshots.rs  benchmark_claim_evidence_plan_snapshots.rs  benchmark_constitution_snapshots.rs  benchmark_plan_snapshots.rs  capability_discovery_snapshots.rs  cg10_object_store_runtime_gate.rs  cg14_memory_runtime_hardening_gate.rs  cg17_stateful_reuse_gate.rs  cg20_approx_sketch_gate.rs  cg20_user_capability_gate.rs  cg22_engine_fabric_snapshots.rs  cg8_runtime_promotion_gate.rs  cg8_scheduling_snapshots.rs  cg9_catalog_metadata_gate.rs  ci_work_shaping_plan_snapshots.rs  claim_gate_closeout_snapshots.rs  commit_execution_promotion_gate.rs  compute_capability_matrix_snapshots.rs  correctness_harness_plan_snapshots.rs  correctness_plan_snapshots.rs  cpu_specialization_snapshots.rs  delta_hudi_metadata_read_smoke.rs  dynamic_work_shaping_plan_snapshots.rs  effect_budget_plan_snapshots.rs  encoded_path_selection_snapshots.rs  evidence_schema_registry_snapshots.rs  execution_certificate_plan_snapshots.rs  extension_manifest_effect_matrix_snapshots.rs  fault_tolerance_promotion_gate.rs  generalized_encoded_primitive_gate_snapshots.rs  generated_source_runtime_smoke.rs  global_architecture_gate.rs  iceberg_metadata_read_smoke.rs  input_adapters_snapshots.rs  kernel_registry_snapshots.rs  local_append_only_cdc_overlay_smoke.rs  local_delete_tombstone_read_smoke.rs  (+33 more)
shardloom-contract-tests/: Cargo.toml
shardloom-contract-tests/src/: lib.rs
shardloom-contract-tests/tests/: benchmark_claim_evidence.rs  benchmark_evidence_manifest.rs  capability_certification_snapshots.rs  conda_packaging_recipes.rs  correctness_differential_harness.rs  correctness_fixture_manifest.rs  diagnostic_stability.rs  dynamic_work_shaping.rs  execution_certificate_contracts.rs  expression_operator_semantics.rs  external_baseline_oracles.rs  fidelity_invariants.rs  license_metadata.rs  no_fallback_invariants.rs  physical_operator_kernel_contracts.rs  plan_only_invariants.rs  query_primitive_correctness.rs  release_readiness_metadata.rs  terminology_mappings.rs  traditional_benchmark_harness.rs  vortex_metadata_only_execution_spike.rs
shardloom-core/: Cargo.toml
shardloom-core/src/: agent_contract.rs  approx_sketch.rs  architecture_gate.rs  architecture_spine.rs  benchmark.rs  benchmark_suite.rs  capabilities.rs  certification.rs  correctness.rs  cpu_specialization.rs  dataset.rs  diagnostics.rs  distributed_engine.rs  effect_budget.rs  encoded.rs  engine_modes.rs  execution_certificate.rs  expression.rs  extension.rs  feature_footprint.rs  generated_source.rs  hybrid_engine.rs  input.rs  lib.rs  live_engine.rs  manifest.rs  materialization_policy.rs  native_io.rs  observability.rs  operational_contracts.rs  operator.rs  output.rs  release.rs  remote_api.rs  rfc_coverage.rs  schema.rs  security.rs  session.rs  stateful_reuse.rs  table_intelligence.rs  (+4 more)
shardloom-exec/: Cargo.toml
shardloom-exec/src/: lib.rs  memory.rs  pulseweave.rs  recovery.rs  runtime.rs  sizing.rs  spill_lifecycle.rs  spill_payload.rs  streaming.rs
shardloom-plan/: Cargo.toml
shardloom-plan/src/: estimate.rs  execution_facade.rs  explain.rs  input_bridge.rs  input_planning.rs  lib.rs  object_store.rs  optimizer.rs  plan_ir.rs  scan.rs
shardloom-vortex/: Cargo.toml  build.rs
shardloom-vortex/src/: adapter.rs  adaptive_sizing.rs  bounded_execution.rs  commit_execution_gate.rs  commit_intent.rs  commit_marker.rs  commit_protocol.rs  composite_pushdown.rs  count_readiness.rs  device_residency.rs  encoded_count_approval.rs  encoded_count_physical_kernel.rs  encoded_path_selection.rs  encoded_predicate_evaluation.rs  encoded_projection_execution.rs  encoded_read_api.rs  encoded_read_boundary.rs  encoded_read_executor.rs  encoded_read_fixture.rs  encoded_read_metadata_probe.rs  encoded_read_probe.rs  encoded_read_readiness.rs  execute_step_evidence.rs  execution_readiness.rs  extension_type_capability.rs  file_io.rs  filtered_count_readiness.rs  generalized_filter_execution.rs  (+44 more)
(+1448 files in other folders)
