[workspace]
members = [
  "shardloom-core",
  "shardloom-vortex",
  "shardloom-plan",
  "shardloom-exec",
  "shardloom-cli",
  "shardloom-contract-tests",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/depsilon/shardloom"
rust-version = "1.85"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
