[workspace]
members = [
  "shardloom-core",
  "shardloom-vortex",
  "shardloom-plan",
  "shardloom-exec",
  "shardloom-cli",
  "shardloom-contract-tests",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
description = "Vortex-native no-fallback local compute engine with evidence-certified workflows."
license = "Apache-2.0"
homepage = "https://shardloom.io"
repository = "https://github.com/depsilon/shardloom"
documentation = "https://github.com/depsilon/shardloom/tree/main/docs"
readme = "README.md"
keywords = ["analytics", "columnar", "vortex", "etl", "no-fallback"]
categories = ["command-line-utilities", "database", "encoding", "science"]
rust-version = "1.85"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
