[workspace]
members = [
  "shardloom-core",
  "shardloom-vortex",
  "shardloom-plan",
  "shardloom-exec",
  "shardloom-cli",
  "shardloom-contract-tests",
]
resolver = "2"

[workspace.package]
version = "0.1.10"
edition = "2024"
description = "Pre-release Vortex-first no-fallback local compute engine with evidence-certified workflows."
license = "Apache-2.0"
homepage = "https://shardloom.io"
repository = "https://github.com/depsilon/shardloom"
documentation = "https://github.com/depsilon/shardloom/tree/main/docs"
readme = "README.md"
keywords = ["analytics", "columnar", "vortex", "etl", "no-fallback"]
categories = ["command-line-utilities", "database", "encoding", "science"]
rust-version = "1.96"

[workspace.dependencies]
arrow-array = "58.3.0"
arrow-avro = { version = "58.3.0", default-features = false, features = ["deflate", "snappy"] }
arrow-ipc = "58.3.0"
arrow-schema = "58.3.0"
parquet = "58.3.0"
regex = "1.12.4"
rustc-hash = "2.1.2"
serde_json = "1.0.150"
shardloom-core = { version = "0.1.10", path = "shardloom-core" }
shardloom-exec = { version = "0.1.10", path = "shardloom-exec" }
shardloom-plan = { version = "0.1.10", path = "shardloom-plan" }
shardloom-vortex = { version = "0.1.10", path = "shardloom-vortex" }
vortex = "0.75"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"

[profile.release-lto]
inherits = "release"
lto = "thin"
codegen-units = 1

[profile.release-pgo]
inherits = "release-lto"

[profile.release-native-benchmark]
inherits = "release-lto"
