[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "shardloom"
version = "0.0.0"
description = "Thin Python client for the ShardLoom CLI JSON protocol"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "ShardLoom contributors" }]
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
shardloom = ["py.typed"]
