[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "shardloom"
dynamic = ["version"]
description = "Pre-release Python client for ShardLoom, a Vortex-first no-fallback evidence-certified local compute engine"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [{ name = "ShardLoom contributors" }]
dependencies = []
keywords = ["analytics", "columnar", "vortex", "data-engine", "etl", "benchmark", "no-fallback", "rust", "python"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Typing :: Typed",
]

[project.optional-dependencies]
materialization = ["numpy", "pandas", "pyarrow"]

[project.urls]
Homepage = "https://shardloom.io"
Repository = "https://github.com/depsilon/shardloom"
Issues = "https://github.com/depsilon/shardloom/issues"
Documentation = "https://github.com/depsilon/shardloom/tree/main/docs"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
shardloom = ["py.typed", "bin/*/shardloom", "bin/*/shardloom.exe"]

[tool.setuptools.dynamic]
version = { attr = "shardloom._version.__version__" }
