[package]
name = "shardloom-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
shardloom-core = { path = "../shardloom-core" }
shardloom-exec = { path = "../shardloom-exec" }
shardloom-plan = { path = "../shardloom-plan" }
shardloom-vortex = { path = "../shardloom-vortex" }

[features]
default = []
vortex-encoded-read-spike = ["shardloom-vortex/vortex-encoded-read-spike"]
vortex-local-primitives = ["shardloom-vortex/vortex-local-primitives"]
vortex-traditional-analytics-benchmark = [
    "shardloom-vortex/vortex-traditional-analytics-benchmark",
    "shardloom-vortex/vortex-staged-output-fs",
]

[[bin]]
name = "shardloom"
path = "src/main.rs"
