[package]
name = "shardloom-cli"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
shardloom-core = { version = "0.1.0", path = "../shardloom-core" }
shardloom-exec = { version = "0.1.0", path = "../shardloom-exec" }
shardloom-plan = { version = "0.1.0", path = "../shardloom-plan" }
shardloom-vortex = { version = "0.1.0", path = "../shardloom-vortex" }

[features]
default = []
vortex-encoded-read-spike = ["shardloom-vortex/vortex-encoded-read-spike"]
vortex-local-primitives = ["shardloom-vortex/vortex-local-primitives"]
vortex-traditional-analytics-benchmark = [
    "shardloom-vortex/vortex-traditional-analytics-benchmark",
    "shardloom-vortex/vortex-staged-output-fs",
]

[[bin]]
name = "shardloom"
path = "src/main.rs"
