[package]
name = "shardloom-cli"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
shardloom-core = { version = "0.1.0", path = "../shardloom-core" }
shardloom-exec = { version = "0.1.0", path = "../shardloom-exec" }
shardloom-plan = { version = "0.1.0", path = "../shardloom-plan" }
shardloom-vortex = { version = "0.1.0", path = "../shardloom-vortex" }
arrow-schema = "58.3.0"
regex = "1.12.3"
rusqlite = { version = "0.40.1", default-features = false, features = ["bundled"] }

[features]
default = []
universal-format-io = ["shardloom-vortex/universal-format-io"]
vortex-write = ["shardloom-vortex/vortex-write"]
vortex-encoded-read-spike = ["shardloom-vortex/vortex-encoded-read-spike"]
vortex-local-primitives = ["shardloom-vortex/vortex-local-primitives"]
vortex-traditional-analytics-benchmark = [
    "shardloom-vortex/vortex-traditional-analytics-benchmark",
    "shardloom-vortex/vortex-staged-output-fs",
]

[dev-dependencies]
arrow-array = "58.3.0"
arrow-avro = { version = "59.0.0", default-features = false, features = ["deflate", "snappy"] }
arrow-ipc = "58.3.0"
orc-rust = { version = "0.8.0", default-features = false }
parquet = "58.3.0"

[[bin]]
name = "shardloom"
path = "src/main.rs"
