[package]
name = "shardloom-contract-tests"
version = "0.1.0"
edition.workspace = true
description.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
shardloom-core = { version = "0.1.0", path = "../shardloom-core" }
shardloom-plan = { version = "0.1.0", path = "../shardloom-plan" }
shardloom-exec = { version = "0.1.0", path = "../shardloom-exec" }
shardloom-vortex = { version = "0.1.0", path = "../shardloom-vortex" }
