[package]
name = "shardloom-contract-tests"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
shardloom-core = { workspace = true }
shardloom-plan = { workspace = true }
shardloom-exec = { workspace = true }
shardloom-vortex = { workspace = true }
