[package]
name = "shardloom-vortex"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
publish = false

[lints]
workspace = true

[features]
default = []
upstream-vortex = ["dep:vortex"]
universal-format-io = [
    "dep:arrow-array",
    "dep:arrow-avro",
    "dep:arrow-ipc",
    "dep:arrow-schema",
    "dep:orc-rust",
    "dep:parquet",
]
vortex-file-io = ["upstream-vortex"]
vortex-object-store = ["vortex-file-io"]
vortex-write = ["vortex-file-io"]
vortex-local-primitives = ["vortex-file-io", "dep:lending-iterator"]
vortex-traditional-analytics-benchmark = [
    "universal-format-io",
    "vortex-write",
    "vortex-encoded-read-spike",
    "vortex-local-primitives",
    "dep:serde_json",
]
vortex-staged-output-fs = []
vortex-metadata-executor = []
vortex-encoded-read-executor = []
vortex-encoded-read-spike = ["vortex-file-io", "vortex-encoded-read-executor"]

[dependencies]
arrow-array = { version = "58.3.0", optional = true }
arrow-avro = { version = "58.3.0", default-features = false, features = ["deflate", "snappy"], optional = true }
arrow-ipc = { version = "58.3.0", optional = true }
arrow-schema = { version = "58.3.0", optional = true }
orc-rust = { version = "0.8.0", default-features = false, optional = true }
parquet = { version = "58.3.0", optional = true }
shardloom-core = { version = "0.1.0", path = "../shardloom-core" }
shardloom-exec = { version = "0.1.0", path = "../shardloom-exec" }
shardloom-plan = { version = "0.1.0", path = "../shardloom-plan" }
lending-iterator = { version = "0.1.7", optional = true }
serde_json = { version = "1.0", optional = true }
sha2 = "0.11"
vortex = { version = "0.75", optional = true }
