[package]
name = "shardloom-vortex"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
publish = false

[lints]
workspace = true

[features]
default = []
release-user-surfaces = [
    "universal-format-io",
    "vortex-write",
    "vortex-local-primitives",
    "vortex-production-runtime",
]
upstream-vortex = ["dep:vortex"]
universal-format-io = [
    "dep:arrow-array",
    "dep:arrow-avro",
    "dep:arrow-ipc",
    "dep:arrow-schema",
    "dep:orc-rust",
    "dep:parquet",
]
vortex-file-io = ["upstream-vortex"]
vortex-object-store = ["vortex-file-io"]
vortex-write = ["vortex-file-io"]
vortex-local-primitives = ["vortex-file-io", "dep:lending-iterator"]
vortex-production-runtime = ["vortex-traditional-analytics-benchmark"]
vortex-traditional-analytics-benchmark = [
    "universal-format-io",
    "vortex-write",
    "vortex-encoded-read-spike",
    "vortex-local-primitives",
    "dep:serde_json",
]
vortex-staged-output-fs = []
vortex-metadata-executor = []
vortex-encoded-read-executor = []
vortex-encoded-read-spike = ["vortex-file-io", "vortex-encoded-read-executor"]

[dependencies]
arrow-array = { workspace = true, optional = true }
arrow-avro = { workspace = true, optional = true }
arrow-ipc = { workspace = true, optional = true }
arrow-schema = { workspace = true, optional = true }
orc-rust = { version = "0.8.0", default-features = false, optional = true }
parquet = { workspace = true, optional = true }
shardloom-core = { workspace = true }
shardloom-exec = { workspace = true }
shardloom-plan = { workspace = true }
lending-iterator = { version = "0.1.7", optional = true }
serde_json = { version = "1.0", optional = true }
sha2 = "0.11"
vortex = { workspace = true, optional = true }
